# ai-producer-hub

./: .cursorrules  .pre-commit-config.yaml  ASSESSMENT.md  CHANGELOG.md  MASSIVE_AI_MODERNIZATION.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  start.ps1
.github/workflows/: ci.yml  publish.yml
.zed/: extensions.toml  settings.json  tasks.json
mcpb/: config.toml
scripts/: backup-repo.ps1  check-repo-standards.ps1
src/ai_producer_hub/: __init__.py  __main__.py  _version.py  ai_integration.py  server.py
src/ai_producer_hub/tools/: __init__.py  midi.py
tests/: __init__.py  test_server.py
webapp/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: dashboard.tsx  help.tsx  midi.tsx  settings.tsx  tools.tsx
webapp/src/store/: app.ts
