[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-producer-hub"
version = "1.0.0"
description = "AI Music Producer - Generate, Mix, Master, Stream (VirtualDJ + Suno + Plex + Reaper + OBS)"
authors = [
    {name = "Sandra Schipal", email = "sandra@sandraschi.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
keywords = ["mcp", "ai", "music", "producer", "dj", "suno", "virtualdj", "plex", "reaper", "obs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Artistic Software"
]

dependencies = [
    "fastmcp>=2.13.0,<2.14.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    # MIDI support - 1983 standard meets 2025 AI!
    "python-rtmidi>=1.5.0",
    "mido>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0"
]

[project.scripts]
ai-producer-hub = "ai_producer_hub.server:main"

[project.urls]
Homepage = "https://github.com/sandraschi/ai-producer-hub"
Repository = "https://github.com/sandraschi/ai-producer-hub.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

