[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-producer-hub"
version = "1.0.0"
description = "AI Music Producer - Generate, Mix, Master, Stream (VirtualDJ + LeVo AI + Plex + Reaper + OBS)"
authors = [
    {name = "Sandra Schipal", email = "sandra@sandraschi.dev"}
]
maintainers = [
    {name = "Sandra Schipal", email = "sandra@sandraschi.dev"}
]
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "src/ai_producer_hub/_version.py"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_producer_hub*"]

[tool.setuptools.package-data]
ai_producer_hub = ["py.typed"]
requires-python = ">=3.11,<3.13"
keywords = ["mcp", "ai", "music", "producer", "dj", "levo", "songgeneration", "virtualdj", "plex", "reaper", "obs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastMCP",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "fastmcp>=3.1.0,<4",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    # AI/LLM integration
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    # MIDI support - 1983 standard meets 2025 AI!
    "python-rtmidi>=1.5.0",
    "mido>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "tox>=4.0.0"
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0"
]
all = [
    "ai-producer-hub[dev,ai,docs]"
]

[project.scripts]
ai-producer-hub = "ai_producer_hub.server:main"

[project.urls]
Homepage = "https://github.com/sandraschi/ai-producer-hub"
Repository = "https://github.com/sandraschi/ai-producer-hub"
Documentation = "https://ai-producer-hub.readthedocs.io/"
Issues = "https://github.com/sandraschi/ai-producer-hub/issues"
Changelog = "https://github.com/sandraschi/ai-producer-hub/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/sandraschi/ai-producer-hub/issues"
"Source Code" = "https://github.com/sandraschi/ai-producer-hub"
PyPI = "https://pypi.org/project/ai-producer-hub/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "C90", "UP", "B", "A"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["mido.*", "rtmidi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.twine]
upload = ["dist/*"]
skip-existing = true

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/ai_producer_hub/_version.py"

[tool.hatch]
version = {path = "src/ai_producer_hub/_version.py"}

[tool.hatch.build]
include = [
    "src/ai_producer_hub",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_producer_hub"]

